<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/color_red"
            android:icon="@mipmap/ic_color_lens_white_18dp"
            android:orderInCategory="1"
            android:title="@string/red"
            app:showAsAction="never" />
        <item
            android:id="@+id/color_blue"
            android:icon="@mipmap/ic_color_lens_white_18dp"
            android:orderInCategory="3"
            android:title="@string/blue"
            app:showAsAction="never" />
        <item
            android:id="@+id/color_yellow"
            android:icon="@mipmap/ic_color_lens_white_18dp"
            android:orderInCategory="1"
            android:title="@string/yellow"
            app:showAsAction="never" />
        <item
            android:id="@+id/color_green"
            android:icon="@mipmap/ic_color_lens_white_18dp"
            android:orderInCategory="4"
            android:title="@string/green"
            app:showAsAction="never" />

    </group>
    <item
        android:id="@+id/Settings"
        android:icon="@mipmap/ic_settings_white_18dp"
        android:orderInCategory="4"
        android:title="@string/Settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:icon="@mipmap/ic_close_white_16dp"
        android:orderInCategory="5"
        android:title="@string/Exit"
        app:showAsAction="never" />


</menu>